Bug 1672842 - patch 1 - Update handling of macOS system font to avoid Core Text failures when instantiating the system font. r=jrmuizel

With this patch, the system font seems to work OK again on 10.15 when building Firefox with SDK10.15,
provided webrender is *disabled*. We no longer trigger the Core Text error messages from InitSystemFontNames(),
and the proper system font is used.

(With webrender, we get garbage because it fails to instantiate the system font and renders "random" Times
glyphs instead.)

Differential Revision: https://phabricator.services.mozilla.com/D95453